--- a/main.css
+++ b/main.css
@@ -84,11 +84,24 @@ header {
 
 /* ----- Phase 1 - Moderate Screen ----- */
 
-/* Your code here */
+@media (min-width: 820px) {
+  .sidebar {
+    flex-direction: column;
+  }
+
+  .content {
+    flex-direction: row;
+  }
+
+}
 
 /* ----- Phase 1 - Wide Screen ----- */
 
-/* Your code here */
+@media (min-width: 1220px) {
+    .page {
+      flex-direction: row;
+    }
+}
 
 /* ===== PRINTING ===== */
 
